Uploaded egg placeholder image

--- a/simulator.html
+++ b/simulator.html
@@ -29,7 +29,7 @@
   </div>
 
   <div class="large-image-container">
-    <img src="https://cdn.discordapp.com/attachments/737264849813241887/1338660889728909382/male_shrimp_assets.png" alt="Shrimp egg">
+    <img src="https://i.ibb.co/gMTzx7DG/egg-assets.png" alt="Shrimp egg">
   </div>
 
   <div class="swipe"></div>
