Broke the image so that the button's visible

--- a/simulator.html
+++ b/simulator.html
@@ -29,7 +29,7 @@
   </div>
 
   <div class="large-image-container">
-    <img src="https://i.ibb.co/gMTzx7DG/egg-assets.png" alt="Shrimp egg">
+    <img src="https://i.ibbbbbb.co/gMTzx7DG/egg-assets.png" alt="Shrimp egg">
   </div>
 
   <div class="swipe"></div>
