Added a below box

--- a/simulator.html
+++ b/simulator.html
@@ -15,6 +15,7 @@
       <li class="hide"></li>
       <li class="prev"></li>
       <li class="act"></li>
+      <li class="below"></li> <!-- NEW: box below the main box -->
       <li class="next"></li>
       <li class="next new-next"></li>
     </ul>
@@ -23,6 +24,7 @@
       <li class="hide"></li>
       <li class="prev"></li>
       <li class="act"></li>
+      <li class="below"></li> <!-- NEW: box below the main box -->
       <li class="next"></li>
       <li class="next new-next"></li>
     </ul>
