Multiple genotypes displayed below!

--- a/simulator.html
+++ b/simulator.html
@@ -15,7 +15,7 @@
       <li class="hide"></li>
       <li class="prev"></li>
       <li class="act"></li>
-      <li class="below"></li> <!-- NEW: box below the main box -->
+      <li class="info"></li> <!-- Will be filled with multiple info boxes -->
       <li class="next"></li>
       <li class="next new-next"></li>
     </ul>
@@ -24,7 +24,7 @@
       <li class="hide"></li>
       <li class="prev"></li>
       <li class="act"></li>
-      <li class="below"></li> <!-- NEW: box below the main box -->
+      <li class="info"></li> <!-- Will be filled with multiple info boxes -->
       <li class="next"></li>
       <li class="next new-next"></li>
     </ul>
