--- a/simulator.html
+++ b/simulator.html
@@ -34,6 +34,12 @@
     <img src="https://i.ibbbbbb.co/gMTzx7DG/egg-assets.png" alt="Shrimp egg">
   </div>
 
+  <div style="text-align:center; margin: 24px 0;">
+    <button id="mix-genes-btn" style="font-size:1.2em; padding:10px 24px; border-radius:8px; background:#FFD166; color:#333; border:none; cursor:pointer; box-shadow:0 2px 6px rgba(0,0,0,0.07);">
+      Mix Genes
+    </button>
+  </div>
+
   <div class="swipe"></div>
 
   <!-- Navigation Buttons -->
