Positioning of egg

--- a/simulator.html
+++ b/simulator.html
@@ -31,6 +31,7 @@
   </div>
 
   <div class="large-image-container">
+    <div class="egg-info-container"></div>
     <img src="https://i.ibbbbbb.co/gMTzx7DG/egg-assets.png" alt="Shrimp egg">
   </div>
 
