--- a/simulator.html
+++ b/simulator.html
@@ -39,7 +39,12 @@
     <button id="mix-genes-btn" style="font-size:1.2em; padding:10px 24px; border-radius:8px; background:#FFD166; color:#333; border:none; cursor:pointer; box-shadow:0 2px 6px rgba(0,0,0,0.07);">
       Mix Genes
     </button>
+    <button id="big-batch-btn" style="font-size:1.2em; padding:10px 24px; border-radius:8px; background:#06D6A0; color:#fff; border:none; cursor:pointer; box-shadow:0 2px 6px rgba(0,0,0,0.07); margin-left:12px;">
+      Big Batch
+    </button>
   </div>
+  <div class="egg-batch-genotype" style="display:none; text-align:center; margin-bottom:10px;"></div>
+  <div class="egg-batch-grid" style="display:none; justify-content:center; margin-bottom:24px;"></div>
 
   <div class="swipe"></div>
 
