Added shrimp grids in the corners

--- a/simulator.html
+++ b/simulator.html
@@ -51,6 +51,9 @@
     <a href="final.html"><button>Next →</button></a>
   </div>
 
+  <div class="shrimp-grid shrimp-grid-left"></div>
+  <div class="shrimp-grid shrimp-grid-right"></div>
+
   <!-- JS files -->
   <script src="simulator.js"></script>
 
