Skip straight to the simulation

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Start Page</title>
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=simulator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section class="page active">
-    <h1>Welcome to the Shrimp Simulator</h1>
-    <iframe src="https://docs.google.com/forms/d/e/YOUR_START_FORM_ID/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <h1>Redirecting to the Shrimp Simulator...</h1>
     <div style="text-align: center; margin-top: 20px;">
       <a href="simulator.html"><button>Go to Simulator</button></a>
     </div>
