--- a/simulator.html
+++ b/simulator.html
@@ -37,10 +37,10 @@
 
     <div style="text-align:center; margin: 24px 0;">
       <button id="big-batch-btn" style="font-size:1.2em; padding:10px 24px; border-radius:8px; background:#06D6A0; color:#fff; border:none; cursor:pointer; box-shadow:0 2px 6px rgba(0,0,0,0.07); margin-left:12px;">
-        Big Batch
+        Repeat batch
       </button>
       <button id="show-lethal-btn" style="font-size:1.2em; padding:10px 24px; border-radius:8px; background:#e63946; color:#fff; border:none; cursor:pointer; box-shadow:0 2px 6px rgba(0,0,0,0.07); margin-left:12px;">
-        Show Lethal Genes
+        Show recessive lethal alleles
       </button>
     </div>
     <div class="egg-batch-genotype" style="display:none; text-align:center; margin-bottom:10px;"></div>
@@ -55,19 +55,19 @@
 
     <div style="text-align:center; margin-top:10px;">
       <button id="preset-1-btn" style="font-size:1em; padding:8px 20px; border-radius:8px; background:#457b9d; color:#fff; border:none; cursor:pointer;">
-        Unique recessive genes
+        Unique recessive alleles
       </button>
 
       <button id="preset-2-btn" style="font-size:1em; padding:8px 20px; border-radius:8px; background:#457b9d; color:#fff; border:none; cursor:pointer;">
-        Shared recessive genes
+        Shared recessive alleles
       </button>
 
       <button id="preset-3-btn" style="font-size:1em; padding:8px 20px; border-radius:8px; background:#457b9d; color:#fff; border:none; cursor:pointer;">
-        Unique lethal genes
+        Unique lethal alleles
       </button>
 
       <button id="preset-4-btn" style="font-size:1em; padding:8px 20px; border-radius:8px; background:#457b9d; color:#fff; border:none; cursor:pointer;">
-        Shared lethal genes
+        Shared lethal alleles
       </button>
     </div>
 
