--- a/simulator.html
+++ b/simulator.html
@@ -69,6 +69,10 @@
       <button id="preset-4-btn" style="font-size:1em; padding:8px 20px; border-radius:8px; background:#457b9d; color:#fff; border:none; cursor:pointer;">
         Shared lethal alleles
       </button>
+
+      <button id="preset-5-btn" style="font-size:1em; padding:8px 20px; border-radius:8px; background:#457b9d; color:#fff; border:none; cursor:pointer;">
+        Introgression
+      </button>
     </div>
 
     <!-- Box below the preset buttons for dynamic text -->
