--- a/simulator.html
+++ b/simulator.html
@@ -103,5 +103,9 @@
   window.addEventListener('resize', setScale);
   setScale();
   </script>
+
+  <div id="preset-cover-overlay" style="display:none; position:absolute; top:0; left:0; width:100%; height:320px; background:rgba(0,0,0,0.0); z-index:9999; justify-content:center; align-items:flex-start;">
+    <img id="preset-cover-img" src="" alt="Preset Cover" style="width:100%; max-width:100%; height:auto; pointer-events:auto; cursor:pointer;">
+  </div>
 </body>
 </html>
